<resources>
    <string name="app_name">YourLightMetered</string>

    <string name="hello_world">Meter Your Light!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Your light metered!</string>
    <string name="title_activity_view_for_camera_mesurings">ViewForCameraMeasurings</string>

    <!-- Strings for main activity -->
    <string name="button_start_mesuring_from_camera">REFLECTED MODE MEASURING</string>
    <string name="toast_camera_disabled">There is no accessible camera on your device</string>
    <string name="button_start_light_measuring">INCIDENT MODE MEASURING</string>

    <string name="toast_sensor_absent">Light sensor is absent!</string>


    <!-- Strings for light meter screen -->
    <string name="button_For_f">f/</string>
    <string name="button_for_sec">sec</string>
    <string name="button_for_iso">iso</string>
    <string name="buton_stop_off">FREEZE MEASURING</string>
    <string name="buton_stop_on">REVIEW MEASURING</string>

    <!--  for java code light meter screen -->
    <string name="picker_iso">Pick ISO:</string>
    <string name="picker_sec">Pick shutter speed:</string>
    <string name="picker_f_stop">Pick F stop:</string>

</resources>
