<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".main_view">

    <TextView android:text="@string/hello_world"
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/test_size_text_view"
        android:layout_centerInParent="true"/>

    <TextView
        android:layout_marginTop="20dp"
        android:id="@+id/textView2"
        android:layout_below="@id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/test_size_text_view"
        android:layout_centerInParent="true"/>




    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"

        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/linearLayout">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/button_for_sec"
            android:id="@+id/button_sec"
            android:layout_weight="1"
            style="@style/Text_in_buttons"
            />

        <Button
            style="@style/Text_in_buttons"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/button_For_f"
            android:id="@+id/button_f"
            android:layout_weight="1"
            />
        <Button

            style="@style/Text_in_buttons"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/button_for_iso"
            android:id="@+id/button_iso"
            android:layout_weight="1"
            />
    </LinearLayout>

    <ToggleButton
        style="@style/Text_in_buttons"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="100dp"

        android:textOff="@string/buton_stop_off"
        android:textOn="@string/buton_stop_on"

        android:id="@+id/button_stop_measurings"
        android:layout_weight="1"
        />



    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linearLayout"
        android:layout_toStartOf="@+id/textView2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@+id/textView2"
        android:id="@+id/linLay">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Large Text"
            android:id="@+id/text_sec"
            android:layout_weight="1"
           />
        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Large Text"
            android:id="@+id/text_f"

            />
        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Large Text"
            android:id="@+id/text_iso"
            />
    </LinearLayout>
    <TextView
        android:layout_weight="1"
        android:layout_below="@id/linLay"
        android:layout_above="@id/button_stop_measurings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/text_ev"
        />

</RelativeLayout>
